app/assets/stylesheets/application.css
ul.topnav {
    /*list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #990000;
    position: fixed;
    top: 0;
    width: 100%;*/
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #990000;
    top: 0;
    width: 100%;

}

li{
  float: left;
}

li, .dropButton{
  display: inline-block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li input{
  padding: 10px 15px;
}

button.dropButton{
  border: none;
}

li.account{
  float: right;
  margin-right: 40px;
  display: inline-block;
}

div.dropDownContent {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}


div.dropDownContent a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

li a, .dropButton {
    display: inline-block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;

}


.dropdown-content a:hover {background-color: #f1f1f1}

li.account:hover .dropDownContent {
    display: block;
}

div.logo{
  background-size: 272px 92px;
  height: 92px;
  width: 272px;
}

